Arrumando a estrutura das páginas

--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>CloudStore - Home</title>
-        <link rel="stylesheet" href="reset.css">
+        <link rel="stylesheet" href="./components/styles/reset.css">
         <link rel="stylesheet" href="home.css">
-        <link rel="stylesheet" href="./responsive/responsiveHome.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="./components/styles/style.css">
         
     </head>
     <body>
@@ -28,23 +27,23 @@
                             <a href="./index.html">Home</a>
                         </li>
                         <li class="item-menu">
-                            <a href="./products.html">Produtos</a>
+                            <a href="./components/products/products.html">Produtos</a>
                         </li>
                         <li class="item-menu">
-                            <a href="./contact.html">Contato</a>
+                            <a href="./components/contact/contact.html">Contato</a>
                         </li>
                         <li class="item-menu">
-                            <a href="./login.html">Login</a>
+                            <a href="./components/login/login.html">Login</a>
                         </li>
                         <li class="item-menu">
-                            <a href="./register.html">Registrar</a>
+                            <a href="./components/register/register.html">Registrar</a>
                         </li>
                     </ul>
                 </nav>
             </div>
         </header>
         <div class="headerLine"></div>
-        <script src="./js/index.js"></script>
+        <script src="./scripts/index.js"></script>
         <main>
             <div class="container">
                 <div>
