Adicionado a página de imagens

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                             <a href="./components/products/products.html">Produtos</a>
                         </li>
                         <li class="item-menu">
+                            <a href="./components/galery/galery.html">Galeria</a>
+                        </li>
+                        <li class="item-menu">
                             <a href="./components/contact/contact.html">Contato</a>
                         </li>
                         <li class="item-menu">
